utm/9.717/standalone.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Sophos UTM 9",
  "Parameters": {
    "AMI": {
      "Description": "Autodetect uses the latest AMI based on the pricing option you select. Otherwise, specify an AMI ID.",
      "Type": "String",
      "Default": "autodetect"
    },
    "LicenseType": {
      "Description": "Select between Bring Your Own License (BYOL) or pay per instance-hour (Hourly). This parameter does not take effect if you manually enter an AMI ID.",
      "Type": "String",
      "AllowedValues": [
        "Hourly",
        "BYOL"
      ]
    },
    "VpcId": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "ID of an existing VPC to launch the deployment in."
    },
    "PrivateSubnetId": {
      "Description": "Subnet ID for private network interface.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PublicSubnetId": {
      "Description": "Subnet ID for public network interface.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PrivateNetworkCIDR": {
      "Description": "Allow all traffic from this CIDR on the private network interface.",
      "Type": "String",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be IPv4 CIDR notation: X.X.X.X/X"
    },
    "PublicNetworkCIDR": {
      "Description": "Allow all TCP traffic (except port 22 and 4444) from this CIDR on the public network interface.",
      "Type": "String",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be IPv4 CIDR notation: X.X.X.X/X"
    },
    "OptTrustedNetworkCIDR": {
      "Description": "Allow all traffic (including! TCP port 22 and 4444) from this CIDR on the public network interface.",
      "Type": "String",
      "Default": ""
    },
    "InstanceSize": {
      "Description": "The default EC2 instance type is m4.large. If m4.large is not available in your region, a similar EC2 instance type will be used.",
      "Type": "String",
      "Default": "default"
    },
    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Description": "Name of an existing EC2 KeyPair to enable SSH access."
    },
    "OptExistingElasticIpId": {
      "Description": "Association ID of an existing Elastic IP. If no ID is specified a new Elastic IP is created.",
      "Type": "String"
    }
  },
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "Instance Configuration"
          },
          "Parameters": [
            "AMI",
            "LicenseType",
            "InstanceSize"
          ]
        },
        {
          "Label": {
            "default": "Infrastructure Configuration"
          },
          "Parameters": [
            "VpcId",
            "PrivateSubnetId",
            "PublicSubnetId",
            "PrivateNetworkCIDR",
            "PublicNetworkCIDR",
            "OptExistingElasticIpId"
          ]
        },
        {
          "Label": {
            "default": "Access Permissions"
          },
          "Parameters": [
            "KeyName",
            "OptTrustedNetworkCIDR"
          ]
        }
      ],
      "ParameterLabels": {
        "AMI": {
          "default": "AMI ID (required)"
        },
        "LicenseType": {
          "default": "Pricing Option (required)"
        },
        "InstanceSize": {
          "default": "Instance Type (required)"
        },
        "VpcId": {
          "default": "VPC ID (required)"
        },
        "PrivateSubnetId": {
          "default": "Private Subnet ID (required)"
        },
        "PublicSubnetId": {
          "default": "Public Subnet ID (required)"
        },
        "PrivateNetworkCIDR": {
          "default": "Private Network CIDR (required)"
        },
        "PublicNetworkCIDR": {
          "default": "Public Network CIDR (required)"
        },
        "OptExistingElasticIpId": {
          "default": "Existing Elastic IP ID (optional)"
        },
        "KeyName": {
          "default": "SSH Key (required)"
        },
        "OptTrustedNetworkCIDR": {
          "default": "Trusted Network CIDR (optional)"
        }
      }
    }
  },
  "Mappings": {
    "RegionMap": {
      "af-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-east-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-1": {
        "Hourly": "ami-033ba9233ecd3a87c",
        "BYOL": "ami-069a42ca1876ac863",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-2": {
        "Hourly": "ami-0a99f46b368f9dfed",
        "BYOL": "ami-0a9d6754aea61e2d0",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-3": {
        "Hourly": "ami-03e81598601c5738a",
        "BYOL": "ami-0dc06f7e0193a75e9",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-south-1": {
        "Hourly": "ami-0df4b78952cc18954",
        "BYOL": "ami-0d23e58dadc6aa0a9",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-southeast-1": {
        "Hourly": "ami-0e1ac6ed0692bb30d",
        "BYOL": "ami-02b5c832e64653ef5",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-southeast-2": {
        "Hourly": "ami-043e891e07e03a753",
        "BYOL": "ami-09001ac2d02b0e82c",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ca-central-1": {
        "Hourly": "ami-07e579f2cdb729422",
        "BYOL": "ami-03179ce81fd4bc1a0",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-central-1": {
        "Hourly": "ami-08ae2798c9c0b1623",
        "BYOL": "ami-0eb48b1ea910048e1",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-central-2": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-north-1": {
        "Hourly": "ami-038d4b70215799701",
        "BYOL": "ami-0dac526c055a9b2ac",
        "ARN": "aws",
        "HAInstanceType": "m5.large"
      },
      "eu-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-south-2": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-1": {
        "Hourly": "ami-0ec9c172673fa7f4f",
        "BYOL": "ami-04d29187cd58057cc",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-2": {
        "Hourly": "ami-0f6088329a4d7a9fb",
        "BYOL": "ami-0001041cbd7abc415",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-3": {
        "Hourly": "ami-0369a47198a0bc799",
        "BYOL": "ami-056a400aea903d0db",
        "ARN": "aws",
        "HAInstanceType": "m5.large"
      },
      "me-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "sa-east-1": {
        "Hourly": "ami-0f550c4378779a172",
        "BYOL": "ami-0767e3cd6bf84daf8",
        "ARN": "aws",
        "HAInstanceType": "m3.medium"
      },
      "us-east-1": {
        "Hourly": "ami-0034da6bdfc72f5be",
        "BYOL": "ami-03d06d3fc44ef8bc5",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-east-2": {
        "Hourly": "ami-05d5ce9efd56a64e7",
        "BYOL": "ami-074437a5a89e0cbd8",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-gov-east-1": {
        "Hourly": "ami-00de3dbf3ca6bee2f",
        "BYOL": "ami-04ed7c9fec3b8ea8d",
        "ARN": "aws-us-gov",
        "HAInstanceType": "m5.large"
      },
      "us-gov-west-1": {
        "Hourly": "ami-0e072cf31cc9b8740",
        "BYOL": "ami-037b2c0bfaffba4c3",
        "ARN": "aws-us-gov",
        "HAInstanceType": "m4.large"
      },
      "us-west-1": {
        "Hourly": "ami-0ea903c0ce29cf958",
        "BYOL": "ami-072ea8edc09fa636d",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-west-2": {
        "Hourly": "ami-017ed4bcf64411a1d",
        "BYOL": "ami-00f3a4fe634cdae67",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      }
    }
  },
  "Conditions": {
    "DetectAMI": {
      "Fn::Equals": [
        {
          "Ref": "AMI"
        },
        "autodetect"
      ]
    },
    "DetectInstanceSize": {
      "Fn::Equals": [
        {
          "Ref": "InstanceSize"
        },
        "default"
      ]
    },
    "TrustedPublicNetwork": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "OptTrustedNetworkCIDR"
            },
            ""
          ]
        }
      ]
    },
    "AllocateElasticIP": {
      "Fn::Equals": [
        {
          "Ref": "OptExistingElasticIpId"
        },
        ""
      ]
    }
  },
  "Resources": {
    "SecurityGroupPrivate": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "-1",
            "CidrIp": {
              "Ref": "PrivateNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "SecurityGroupPublic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "0",
            "ToPort": "21"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "23",
            "ToPort": "4443"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "4445",
            "ToPort": "5431"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "5433",
            "ToPort": "65535"
          },
          {
            "IpProtocol": "udp",
            "FromPort": "3410",
            "ToPort": "3410",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "SecurityGroupTrusted": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "-1",
            "CidrIp": {
              "Ref": "OptTrustedNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      },
      "Condition": "TrustedPublicNetwork"
    },
    "PublicENI": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnetId"
        },
        "Description": "ENI for Public Subnet",
        "GroupSet": [
          {
            "Fn::If": [
              "TrustedPublicNetwork",
              {
                "Ref": "SecurityGroupTrusted"
              },
              {
                "Ref": "SecurityGroupPublic"
              }
            ]
          },
          {
            "Ref": "SecurityGroupPublic"
          }
        ],
        "SourceDestCheck": "false"
      }
    },
    "PrivateENI": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetId"
        },
        "Description": "ENI for Private Subnet",
        "GroupSet": [
          {
            "Ref": "SecurityGroupPrivate"
          }
        ],
        "SourceDestCheck": "false"
      }
    },
    "Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Private"
          }
        ],
        "InstanceType": {
          "Fn::If": [
            "DetectInstanceSize",
            {
              "Fn::FindInMap": [
                "RegionMap",
                {
                  "Ref": "AWS::Region"
                },
                "HAInstanceType"
              ]
            },
            {
              "Ref": "InstanceSize"
            }
          ]
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "NetworkInterfaces": [
          {
            "NetworkInterfaceId": {
              "Ref": "PublicENI"
            },
            "DeviceIndex": "0"
          },
          {
            "NetworkInterfaceId": {
              "Ref": "PrivateENI"
            },
            "DeviceIndex": "1"
          }
        ],
        "ImageId": {
          "Fn::If": [
            "DetectAMI",
            {
              "Fn::FindInMap": [
                "RegionMap",
                {
                  "Ref": "AWS::Region"
                },
                {
                  "Ref": "LicenseType"
                }
              ]
            },
            {
              "Ref": "AMI"
            }
          ]
        }
      }
    },
    "NewEIP": {
      "Type": "AWS::EC2::EIP",
      "Condition": "AllocateElasticIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "EIPAssociation": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "NetworkInterfaceId": {
          "Ref": "PublicENI"
        },
        "AllocationId": {
          "Fn::If": [
            "AllocateElasticIP",
            {
              "Fn::GetAtt": [
                "NewEIP",
                "AllocationId"
              ]
            },
            {
              "Ref": "OptExistingElasticIpId"
            }
          ]
        }
      }
    }
  },
  "Outputs": {
    "URL": {
      "Description": "URL to the Gateway portal",
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "Instance",
                "PublicIp"
              ]
            },
            ":4444"
          ]
        ]
      }
    }
  }
}
